apps/authentication/keycloak/chart/templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - "victor.io"
  gateways:
    - istio-system/gateway
  http:
    - name: "keycloak"
      match:
      - uri:
          prefix: "/keycloak"
      rewrite:
        uri: "/"
      route:
      - destination:
        port:
          number: 80
        host: authentication-keycloak
